# iptorrents-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
extras/: get-cookies.js
iptorrents/: __init__.py  categories.py  cli.py  config.py  download.py  info.py  search.py  session.py  utils.py
tests/: fixtures.py  test_http.py  test_info.py  test_search.py
