[project]
name = "iptorrents-cli"
version = "0.1.0"
description = "CLI for searching and downloading torrents from IPTorrents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "toon-format",
]

[project.scripts]
ipt = "iptorrents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iptorrents"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.2",
    "responses>=0.26.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
